    replaced by '?'. Thanks to Adrian Vondendriesch for help debugging this.
    (Closes: #671915)

  [ Martin Pitt ]
  * debian/supported-versions: Add 9.3 for testing/unstable.
  * debian/supported-versions: Add Ubuntu 13.10.
  * Bump Standards-Versio to 3.9.4 (no changes necessary).
  * pg_upgradecluster: For upgrades to 9.3, migrate "replication_timeout" to
    "wal_sender_timeout".

 -- Christoph Berg <myon@debian.org>  Thu, 02 May 2013 15:41:06 +0200

postgresql-common (141) experimental; urgency=low

  [ Christoph Berg ]
  * debian/maintscripts-functions: Fix configure_client_version to call
    _link_manpages correctly, spotted by Kris Shannon. (Closes: #701602)
  * debian/postgresql-common.sysctl: Note that the file is Linux-specifc and
    do some rewording of the comments.
  * debian/supported-versions:
    + Deprecate 8.3 for pgdg builds.
    + Handle missing os-release and lsb_release gracefully, just print a
      warning. (Affects squeeze systems, Introduced by the fix for #697182).
  * pg_buildext: Deprecate <srcdir> parameter. The docs do not mention it
    anymore, but the script will still accept it.
  * pg_createcluster, pg_upgradecluster: For 9.2 and higher, use the new
    ssl_ca_file option instead of creating a root.crt symlink in the data
    directory. (Related to the fix for #680162 below.)
  * pg_createcluster: If /etc/postgresql-common/root.crl is present, symlink
    it (<= 9.1), or set ssl_crl_file (>= 9.2).
  * pg_ctlcluster: Create (first) unix_socket_directory if missing.
  * pg_ctlcluster: Document start.conf by pointing at pg_createcluster(8).
  * pg_lsclusters: Make output column widths dynamically adjust to contents;
    shorten "Version" in header to "Ver".
  * pg_upgradecluster: Get cluster encoding before shutting down the cluster
    so we don't need to restart it in pg_upgrade mode; temporarily start the
    cluster if needed.
  * postgresql-client-common: For apt.postgresql.org builds (with "pgdg" in