@@ -1017,6 +1017,133 @@ restart_after_crash = on
 custom_variable_classes = ''
 ";
 
+$fullconf{'9.2'} = "port = 5432
+max_connections = 50
+superuser_reserved_connections = 3
+unix_socket_directory = ''
+unix_socket_group = ''
+unix_socket_permissions = 0777
+bonjour = off
+bonjour_name = ''
+authentication_timeout = 1min
+ssl = off
+ssl_ciphers = 'ALL:!ADH:!LOW:!EXP:!MD5:\@STRENGTH'
+ssl_renegotiation_limit = 512MB
+ssl_cert_file = 'server.crt'
+ssl_key_file = 'server.key'
+ssl_ca_file = ''
+ssl_crl_file = ''
+krb_srvname = 'postgres'
+tcp_keepalives_idle = 0
+tcp_keepalives_interval = 0
+tcp_keepalives_count = 0
+shared_buffers = 24MB
+temp_buffers = 8MB
+max_prepared_transactions = 0
+work_mem = 1MB
+maintenance_work_mem = 16MB
+max_stack_depth = 2MB
+temp_file_limit = -1
+max_files_per_process = 1000
+shared_preload_libraries = ''
+vacuum_cost_delay = 0ms
+vacuum_cost_page_hit = 1
+vacuum_cost_page_miss = 10
+vacuum_cost_page_dirty = 20
+vacuum_cost_limit = 200
+bgwriter_delay = 200ms
+bgwriter_lru_maxpages = 100
+bgwriter_lru_multiplier = 2.0
+effective_io_concurrency = 1
+wal_level = minimal
+fsync = on
+synchronous_commit = on
+wal_sync_method = fsync
+full_page_writes = on
+wal_buffers = -1
+wal_writer_delay = 200ms
+commit_delay = 0
+commit_siblings = 5
+checkpoint_segments = 3
+checkpoint_timeout = 5min
+checkpoint_completion_target = 0.5
+checkpoint_warning = 30s
+archive_mode = off
+archive_command = ''
+archive_timeout = 0
+max_wal_senders = 0
+wal_keep_segments = 0
+replication_timeout = 60s
+synchronous_standby_names = ''
+vacuum_defer_cleanup_age = 0
+hot_standby = off
+max_standby_archive_delay = 30s
+max_standby_streaming_delay = 30s
+wal_receiver_status_interval = 10s
+hot_standby_feedback = off
+seq_page_cost = 1.0
+random_page_cost = 4.0
+cpu_tuple_cost = 0.01
+cpu_index_tuple_cost = 0.005
+cpu_operator_cost = 0.0025
+geqo_effort = 5
+geqo_pool_size = 0
+geqo_generations = 0
+geqo_selection_bias = 2.0
+geqo_seed = 0.0
+default_statistics_target = 100
+constraint_exclusion = partition
+cursor_tuple_fraction = 0.1
+join_collapse_limit = 8
+log_destination = 'stderr'
+logging_collector = off
+log_directory = 'pg_log'
+log_filename = 'postgresql-%Y-%m-%d_%H%M%S.log'
+log_file_mode = 0600
+log_truncate_on_rotation = off
+log_rotation_age = 1d
+log_rotation_size = 10MB
+client_min_messages = notice
+log_min_messages = warning
+log_min_error_statement = error
+log_min_duration_statement = -1
+log_error_verbosity = default
+log_line_prefix = ''
+log_lock_waits = off
+log_statement = 'none'
+log_temp_files = -1
+track_functions = none
+track_activity_query_size = 1024
+autovacuum = on
+log_autovacuum_min_duration = -1
+autovacuum_max_workers = 3
+autovacuum_naptime = 1min
+autovacuum_vacuum_threshold = 50
+autovacuum_analyze_threshold = 50
+autovacuum_vacuum_scale_factor = 0.2
+autovacuum_analyze_scale_factor = 0.1
+autovacuum_freeze_max_age = 200000000
+autovacuum_vacuum_cost_delay = 20ms
+autovacuum_vacuum_cost_limit = -1
+search_path = '\"\$user\",public'
+default_tablespace = ''
+temp_tablespaces = ''
+statement_timeout = 0
+bytea_output = 'hex'
+timezone_abbreviations = 'Default'
+extra_float_digits = 0
+client_encoding = sql_ascii
+lc_messages = 'C'
+lc_monetary = 'C'
+lc_numeric = 'C'
+lc_time = 'C'
+max_locks_per_transaction = 64
+max_pred_locks_per_transaction = 64
+backslash_quote = safe_encoding
+exit_on_error = off
+restart_after_crash = on
+";
+
 # Test one particular upgrade (old version, new version)
 sub do_upgrade {
     my $cur = $_[0];
